--- a/myproject/first_app/templates/index.html
+++ b/myproject/first_app/templates/index.html
@@ -9,6 +9,7 @@
 	{{insert_me}}
 	-->
 	<h3>Calculate Tip</h3>
+	<p>Go to <a href="http://127.0.0.1:8000/calculate_tip/">this URL</a> to access the form</p>
 	{% if totalAmount %}
         <p>Total Amount: ${{ totalAmount }}</p>
     {% endif %}
